Modificacion del parrafo del GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <DOCTYPE html>
-<html lang='en'>
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>GitHub Pages</title>
-</head>
-<body>
-	<h1>GitHub Pages JB</h1>
-	<p>Why do we use it?
-	It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-</body>
-</html>
+	<html lang='en'>
+
+	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>GitHub Pages</title>
+	</head>
+
+	<body>
+		<h1>GitHub Pages JB</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porta felis id velit eleifend bibendum. Nam
+			dictum, sapien ut ullamcorper elementum, nisi leo venenatis mi, eu commodo nisl felis eget elit. Nunc mi
+			enim, blandit ut hendrerit id, semper a tortor. Duis mollis turpis a bibendum efficitur. Donec mollis odio
+			non tortor ultrices consectetur. Maecenas eleifend, augue quis volutpat pharetra, sapien libero aliquet est,
+			vel dignissim tortor augue mattis diam. Maecenas non velit eget enim tristique vehicula sit amet eget dolor.
+			Suspendisse porttitor varius odio, quis maximus nibh rutrum quis. Morbi lacinia tellus et consectetur
+			faucibus. Nullam interdum viverra egestas. Proin fermentum purus sed mi aliquet, eget mattis eros laoreet.
+			Cras id vestibulum nibh, pellentesque mattis odio. Etiam maximus lectus nunc, ac ullamcorper ex blandit a.
+			Aenean ullamcorper vehicula dolor, non feugiat mi consequat ac. Sed quis scelerisque odio, vitae faucibus
+			felis. Vestibulum a lectus quis dui molestie scelerisque.
+		</p>
+	</body>
+
+	</html>
